<resources>
    <string name="app_name">QL Giai Bong Da</string>
    <string name="player_name">Tên cầu thủ</string>
    <string name="pick_date">Chọn ngày sinh</string>
    <string name="nationality">Quốc tịch</string>
    <string name="pick_image">Chọn hình ảnh</string>
    <string name="player_number">Số áo</string>
    <string name="team_name">Tên đội</string>
    <string name="donors">Nhà tài trợ</string>
    <string name="stadium">Tên sân nhà</string>
    <string name="coach_name">Tên HLV</string>
    <string name="referee_name">Tên trọng tài</string>
    <string name="round">Vòng đấu</string>
    <string name="date_start">Ngày bắt đầu</string>
    <string name="short_name">Tên viết tắt</string>

    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="team_management">Quản lý đội bóng</string>
    <string name="coach_management">Quản lý huấn luyện viên</string>
    <string name="referee_management">Quản lý trọng tài</string>
    <string name="player_management">Quản lý cầu thủ</string>

</resources>
