<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <include
            android:id="@+id/toolBar1"
            layout="@layout/appbar_1" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout"
                android:layout_marginTop="25dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cvTeamLogo"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:src="@drawable/no_image"
                    app:civ_border_color="#000000"
                    android:layout_centerHorizontal="true"
                    app:civ_border_width="2dp" />

                <ImageButton
                    android:id="@+id/btnFolder"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@id/cvTeamLogo"
                    android:layout_centerVertical="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/folder_icon"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/edtTeamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/stroke_edit_text"
                android:paddingLeft="10dp"
                android:paddingBottom="8dp"
                android:layout_below="@id/layout"
                android:paddingTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="18sp"
                android:hint="@string/team_name"/>

            <EditText
                android:id="@+id/edtShortName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/stroke_edit_text"
                android:paddingLeft="10dp"
                android:paddingBottom="8dp"
                android:layout_below="@id/edtTeamName"
                android:paddingTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="18sp"
                android:hint="@string/short_name"/>

            <EditText
                android:id="@+id/edtDonors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/stroke_edit_text"
                android:paddingLeft="10dp"
                android:paddingBottom="8dp"
                android:layout_below="@id/edtShortName"
                android:paddingTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="18sp"
                android:hint="@string/donors"/>

            <EditText
                android:id="@+id/edtStadium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/stroke_edit_text"
                android:paddingLeft="10dp"
                android:paddingBottom="8dp"
                android:layout_below="@id/edtDonors"
                android:paddingTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="18sp"
                android:hint="@string/stadium"/>

            <Spinner
                android:id="@+id/spnCaptain"
                android:layout_below="@id/edtStadium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="10dp"
                android:background="@drawable/spinner_background"
                android:paddingBottom="2dp"
                android:textSize="22sp"
                android:paddingTop="2dp"
                android:layout_marginTop="20dp"/>

            <Spinner
                android:id="@+id/spnCoach"
                android:layout_below="@id/spnCaptain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:paddingLeft="10dp"
                android:background="@drawable/spinner_background"
                android:paddingBottom="2dp"
                android:textSize="22sp"
                android:paddingTop="2dp"
                android:layout_marginTop="20dp"/>
            <Button
                android:id="@+id/btnEditTeam"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Xác nhận"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:textSize="18sp"
                android:inputType="number"
                android:layout_marginTop="40dp"
                android:background="@color/blue600"
                android:textColor="#ffffff"
                android:layout_below="@id/spnCoach"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>