<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <include
            android:id="@+id/toolBar1"
            layout="@layout/appbar_1" />

    </com.google.android.material.appbar.AppBarLayout>


    <Spinner
        android:id="@+id/spnHomeTeam"
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:background="@drawable/spinner_background"
        android:paddingBottom="2dp"
        android:textSize="22sp"
        android:paddingTop="2dp"
        android:layout_marginTop="60dp"/>

    <Spinner
        android:id="@+id/spnGuestTeam"
        android:layout_below="@id/spnHomeTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:background="@drawable/spinner_background"
        android:paddingBottom="2dp"
        android:textSize="22sp"
        android:paddingTop="2dp"
        android:layout_marginTop="25dp"/>

    <Spinner
        android:id="@+id/spnReferee"
        android:layout_below="@id/spnGuestTeam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="10dp"
        android:background="@drawable/spinner_background"
        android:paddingBottom="2dp"
        android:textSize="22sp"
        android:paddingTop="2dp"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/edtRound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spnReferee"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/stroke_edit_text"
        android:hint="@string/round"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edtStadium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtRound"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/stroke_edit_text"
        android:hint="@string/stadium"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_marginTop="20dp"
        android:layout_below="@id/edtStadium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvDateStart"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/stroke_edit_text"
            android:textSize="20sp"
            android:hint="@string/date_start"
            android:paddingLeft="10dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"/>

        <ImageButton
            android:layout_gravity="center_vertical"
            android:id="@+id/btnDatePicker"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:scaleType="center"
            android:layout_marginTop="3dp"

            android:background="@android:color/transparent"
            android:src="@drawable/calendar_icon"/>
    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Xác nhận"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:background="@color/blue600"
        android:textColor="#ffffff"
        android:layout_below="@id/layout1"/>
</RelativeLayout>