<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <include
            android:id="@+id/toolBar1"
            layout="@layout/appbar_1" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout"
                android:layout_marginTop="25dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cvCoach"
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:src="@drawable/no_logo"
                    app:civ_border_color="#000000"
                    android:layout_centerHorizontal="true"
                    app:civ_border_width="2dp" />

                <ImageButton
                    android:id="@+id/btnFolder"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@id/cvCoach"
                    android:layout_centerVertical="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/folder_icon"/>

            </RelativeLayout>

            <EditText
                android:id="@+id/edtCoachName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/stroke_edit_text"
                android:paddingLeft="10dp"
                android:paddingBottom="8dp"
                android:layout_below="@id/layout"
                android:paddingTop="8dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textSize="20sp"
                android:hint="@string/coach_name"/>

            <EditText
                android:id="@+id/edtCoachNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edtCoachName"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="18dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/stroke_edit_text"
                android:hint="@string/nationality"
                android:paddingLeft="10dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/layout1"
                android:layout_marginTop="20dp"
                android:layout_below="@id/edtCoachNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvCoachDOB"
                    android:layout_width="0dp"
                    android:layout_weight="8"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/stroke_edit_text"
                    android:textSize="20sp"
                    android:hint="@string/pick_date"
                    android:paddingLeft="10dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"/>

                <ImageButton
                    android:layout_gravity="center_vertical"
                    android:id="@+id/btnDatePicker"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:scaleType="center"
                    android:layout_marginTop="3dp"

                    android:background="@android:color/transparent"
                    android:src="@drawable/calendar_icon"/>
            </LinearLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="Xác nhận"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:textSize="18sp"
                android:inputType="number"
                android:layout_marginTop="40dp"
                android:background="@color/blue600"
                android:textColor="#ffffff"
                android:layout_below="@id/layout1"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>